--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,7 +2,10 @@
   <button class="btn btn-primary" [routerLink]="['/mostrarUsuarios']">
     Usuarios
   </button>
-  <button class="btn btn-danger">
+  <button class="btn btn-danger" [routerLink]="['/mostrarCursos']">
     Cursos
+  </button>
+  <button class="btn btn-warning" [routerLink]="['/mostrarInscripciones']">
+    Inscribir A Curso
   </button>
 </div>
