--- a/src/app/usuario-list/usuario-list.component.html
+++ b/src/app/usuario-list/usuario-list.component.html
@@ -4,8 +4,12 @@
     <button class = "btn btn-primary" routerLink = "/nuevo">
       Nuevo Usuario
     </button>
-    <button class="btn btn-warning">
-      Buscar
+  </div>
+</div>
+<div class = "text-start">
+  <div class="btn-group">
+    <button class = "btn btn-primary" routerLink = "/">
+      Home
     </button>
   </div>
 </div>
