--- a/src/app/curso-list/curso-list.component.html
+++ b/src/app/curso-list/curso-list.component.html
@@ -1,13 +1,19 @@
 <h2 class = "mb-5"> Mis Cursos</h2>
+<div class = "button-group">
 <div class = "text-end">
   <div class="btn-group">
     <button class = "btn btn-primary" routerLink = "/nuevoCurso">
       Nuevo Curso
     </button>
-    <button class="btn btn-warning">
-      Buscar
+  </div>
+</div>
+<div class = "text-start">
+  <div class="btn-group">
+    <button class = "btn btn-primary" routerLink = "/">
+      Home
     </button>
   </div>
+</div>
 </div>
 <table class="table table-hover">
   <thead>
