--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,11 +1,34 @@
-<div class="btn-group">
-  <button class="btn btn-primary" [routerLink]="['/mostrarUsuarios']">
-    Usuarios
-  </button>
-  <button class="btn btn-danger" [routerLink]="['/mostrarCursos']">
-    Cursos
-  </button>
-  <button class="btn btn-warning" [routerLink]="['/mostrarInscripciones']">
-    Inscribir A Curso
-  </button>
+<div class="container">
+  <header>
+    <img src="assets/logo_espe.jpg" alt="Logo" class="logo">
+    <h1 class="title">Sistema de Gestión de Cursos</h1>
+  </header>
+
+  <body>
+    <h2 class="mb-5">Bienvenido al Sistema de Gestión de Cursos</h2>
+    <div class="btn-group">
+      <div class="btn-container">
+        <img src="assets/user-icon.png" alt="Usuarios" class="icon">
+        <button class="btn btn-primary" [routerLink]="['/mostrarUsuarios']">
+          Usuarios
+        </button>
+      </div>
+      <div class="btn-container">
+        <img src="assets/course-icon.png" alt="Cursos" class="icon">
+        <button class="btn btn-danger" [routerLink]="['/mostrarCursos']">
+          Cursos
+        </button>
+      </div>
+      <div class="btn-container">
+        <img src="assets/inscription-icon.png" alt="Inscribir A Curso" class="icon">
+        <button class="btn btn-warning" [routerLink]="['/mostrarInscripciones']">
+          Inscribir A Curso
+        </button>
+      </div>
+    </div>
+  </body>
+
+  <footer>
+    &copy; 2024 Todos los derechos reservados.
+  </footer>
 </div>
