--- a/src/app/asignar-usuario-dialog/asignar-usuario-dialog.component.html
+++ b/src/app/asignar-usuario-dialog/asignar-usuario-dialog.component.html
@@ -1,18 +1,35 @@
-<h2 mat-dialog-title>Inscribir Al Curso</h2>
-<mat-dialog-content>
-  <form [formGroup]="form" (ngSubmit)="submit()">
-    <mat-form-field>
-      <mat-label>ID de Curso</mat-label>
-      <input matInput formControlName="cursoId" required [attr.disabled]="true">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>ID de Usuario</mat-label>
-      <input matInput formControlName="usuarioId" required>
-    </mat-form-field>
-    <div mat-dialog-actions>
-      <button mat-button type="button" (click)="close()">Cancelar</button>
-      <button mat-button type="submit" [disabled]="form.invalid">Inscribir</button>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Inscribir a {{ data.nombreCurso }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="form-container">
+      <form [formGroup]="form" (ngSubmit)="submit()">
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>ID de Curso</mat-label>
+          <input matInput formControlName="cursoId" required [attr.disabled]="true">
+        </mat-form-field>
+        <mat-form-field appearance="fill" class="full-width">
+          <mat-label>ID de Usuario</mat-label>
+          <input matInput formControlName="usuarioId" required>
+        </mat-form-field>
+        <div>
+          <section>
+            <div class="example-button-row">
+              <div class="example-flex-container">
+                <div class="example-button-container">
+                  <button mat-raised-button color="warn" type="button" (click)="close()">
+                    <mat-icon>cancel</mat-icon>
+                    Cancelar</button>
+                  <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">
+                    <mat-icon>add</mat-icon>
+                    Inscribir</button>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </form>
     </div>
-  </form>
-</mat-dialog-content>
-
+  </mat-card-content>
+</mat-card>
