--- a/src/app/usuario-list/usuario-list.component.html
+++ b/src/app/usuario-list/usuario-list.component.html
@@ -1,43 +1,100 @@
-<h2 class = "mb-5"> Mis Usuarios </h2>
-<div class = "text-end">
-  <div class="btn-group">
-    <button class = "btn btn-primary" routerLink = "/nuevo">
-      Nuevo Usuario
-    </button>
-  </div>
-</div>
-<div class = "text-start">
-  <div class="btn-group">
-    <button class = "btn btn-primary" routerLink = "/">
-      Home
-    </button>
-  </div>
-</div>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>NOMBRE</th>
-      <th>EMAIL</th>
-    </tr>
-  </thead>
-  <tbody>
-    @for(usuario of usuarios1; track usuario.id){
-      <tr>
-        <td>{{ usuario.id }}</td>
-        <td>{{ usuario.nombre }}</td>
-        <td>{{ usuario.email }}</td>
-        <td class="text-end">
-          <div class="btn-group">
-            <button class="btn btn-primary" [routerLink]="['/mostrarUsuarios',usuario.id, 'editar']">
-              Editar
-            </button>
-            <button class="btn btn-danger" (click)="delete(usuario)">
-              Eliminar
-            </button>
+<div class="background h-screen w-full overflow-hidden lg:p-4">
+  <div class="content relative h-screen overflow-hidden lg:rounded-2xl">
+    <div class="flex items-start">
+      <div>
+        <h1 class="mb-5">Mis Usuarios</h1>
+      </div>
+      <div class="text-end">
+        <section>
+          <div class="example-button-row">
+            <div class="example-flex-container">
+              <div class="example-button-container">
+                <button mat-fab extended class="btn-home" routerLink="/">
+                  <mat-icon>home</mat-icon>
+                  Inicio
+                </button>
+              </div>
+              <div class="example-button-container">
+                <button mat-fab extended class="btn-add" routerLink="/nuevo">
+                  <mat-icon>add</mat-icon>
+                  Agregar Usuario
+                </button>
+              </div>
+            </div>
           </div>
-        </td>
-      </tr>
-    }
-  </tbody>
-</table>
+        </section>
+      </div>
+    </div>
+    <main>
+    <div class="container">
+      <div class="mt-8 rounded-2xl" style="background: rgb(146 151 179 / 13%)">
+        <div class="container mx-auto">
+          <div class="py-8">
+            <div class="py-4">
+              <div class="max-w-full overflow-x-auto rounded-lg">
+                <div class="mat-elevation-z8">
+                  <table mat-table [dataSource]="dataSource">
+                    <!-- ID Column -->
+                    <ng-container matColumnDef="id">
+                      <th scope="col" class="border-b border-gray-200 px-5 py-3 text-left text-sm font-normal uppercase"
+                        mat-header-cell *matHeaderCellDef> ID </th>
+                      <td class="border-b border-gray-200 p-5 text-sm" mat-cell *matCellDef="let usuario">
+                        {{usuario.id}} </td>
+                    </ng-container>
+
+                    <!-- Nombre Column -->
+                    <ng-container matColumnDef="nombre">
+                      <th scope="col" class="border-b border-gray-200 px-5 py-3 text-left text-sm font-normal uppercase"
+                        mat-header-cell *matHeaderCellDef> Nombre </th>
+                      <td class="border-b border-gray-200 p-5 text-sm" mat-cell *matCellDef="let usuario">
+                        {{usuario.nombre}} </td>
+                    </ng-container>
+
+                    <!-- Email Column -->
+                    <ng-container matColumnDef="email">
+                      <th scope="col" class="border-b border-gray-200 px-5 py-3 text-left text-sm font-normal uppercase"
+                        mat-header-cell *matHeaderCellDef> Email </th>
+                      <td class="border-b border-gray-200 p-5 text-sm" mat-cell *matCellDef="let usuario">
+                        {{usuario.email}} </td>
+                    </ng-container>
+
+                    <!-- Operaciones Column -->
+                    <ng-container matColumnDef="operaciones">
+                      <th scope="col" class="border-b border-gray-200 px-5 py-3 text-left text-sm font-normal uppercase"
+                        mat-header-cell *matHeaderCellDef> Operaciones </th>
+                      <td class="border-b border-gray-200 p-5 text-sm" mat-cell *matCellDef="let usuario">
+                        <div class="example-button-row">
+                          <div class="example-flex-container">
+                            <button mat-fab extended class="btn-edit"
+                              [routerLink]="['/mostrarUsuarios', usuario.id, 'editar']">
+                              <mat-icon>edit</mat-icon>
+                              Editar
+                            </button>
+
+                            <button mat-fab extended class="btn-delete" (click)="delete(usuario)">
+                              <mat-icon>delete</mat-icon>
+                              Eliminar
+                            </button>
+                          </div>
+                        </div>
+                      </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table>
+                  <mat-paginator [pageSizeOptions]="[3, 6, 10]" showFirstLastButtons
+                    aria-label="Select page of users"></mat-paginator>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="text-white">
+        &copy; 2024 Todos los derechos reservados.
+      </footer>
+    </div>
+  </main>
+  </div>
+</div>
